--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -48,7 +48,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/email_et"
         android:layout_width="350dp"
         android:layout_height="72dp"
         android:layout_marginStart="8dp"
@@ -57,7 +57,8 @@
         android:fontFamily="@font/montserrat_semibold"
         android:textSize="16sp"
         android:paddingStart="60dp"
-        android:hint="@string/login_edit_text_enrollment_hint"
+        android:inputType="textEmailAddress"
+        android:hint="@string/login_edit_text_email_hint"
         android:textColor="@color/colorText"
         android:background="@drawable/bg_txt_username"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +66,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/password_et"
         android:layout_width="350dp"
         android:layout_height="72dp"
         android:layout_marginStart="8dp"
@@ -79,10 +80,10 @@
         android:background="@drawable/bg_txt_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/email_et" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/forgot_password_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -94,7 +95,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.883"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/password_et" />
 
     <Button
         android:id="@+id/log_in_button"
@@ -106,7 +107,7 @@
         android:text="@string/login_activity_log_in"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView3"/>
+        app:layout_constraintTop_toBottomOf="@id/forgot_password_button"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -126,6 +127,7 @@
         android:textColor="@color/colorText" />
 
     <TextView
+        android:id="@+id/sign_up_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
