--- a/app/src/main/res/layout/notes_subject_item.xml
+++ b/app/src/main/res/layout/notes_subject_item.xml
@@ -1,20 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:elevation="32dp"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="32dp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="20sp"
-        tools:text="Applied Mathematics II" />
-</androidx.cardview.widget.CardView>
+    <data>
+        <variable
+            name="subject"
+            type="com.example.collegebuddy.domain.Subject" />
+
+        <variable
+            name="subjectCallback"
+            type="com.example.collegebuddy.adapters.SubjectClick" />
+    </data>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="8dp"
+        android:elevation="32dp"
+        android:onClick="@{() -> subjectCallback.onClick(subject)}"
+        app:cardCornerRadius="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@{subject.name}"
+            android:textSize="20sp"
+            tools:text="Applied Mathematics II" />
+    </androidx.cardview.widget.CardView>
+</layout>
