cleaned xml files

--- a/app/src/main/res/layout-v21/notes_subject_item.xml
+++ b/app/src/main/res/layout-v21/notes_subject_item.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="8dp"
+        android:elevation="32dp"
         android:onClick="@{() -> subjectCallback.onClick(subject)}"
         app:cardCornerRadius="32dp"
         app:layout_constraintStart_toStartOf="parent"
