--- a/app/src/main/res/layout/fragment_subject_notes.xml
+++ b/app/src/main/res/layout/fragment_subject_notes.xml
@@ -20,7 +20,7 @@
             android:id="@+id/select_pdf_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Open PDF"
+            tools:text="Open PDF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
