--- a/app/src/main/res/layout-v21/fragment_notes.xml
+++ b/app/src/main/res/layout-v21/fragment_notes.xml
@@ -17,7 +17,9 @@
             android:layout_marginBottom="8dp"
             android:background="@drawable/search_background"
             android:iconifiedByDefault="false"
+            android:queryBackground="@null"
             android:queryHint="Search Subject"
+            android:searchIcon="@drawable/ic_baseline_search_24"
             android:theme="@style/ThemeOverlay.search"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
