--- a/app/src/main/res/layout/custom_alert_layout.xml
+++ b/app/src/main/res/layout/custom_alert_layout.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="24dp"
-    android:paddingRight="24dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:paddingRight="24dp">
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        tools:ignore="LabelFor" />
 </LinearLayout>
