--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -14,15 +14,16 @@
             android:id="@+id/bottom_sheet_button_layout"
             android:layout_width="match_parent"
             android:layout_height="24dp"
+            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+            app:layout_constraintStart_toStartOf="parent">
 
-        <ImageView
+            <ImageView
                 android:id="@+id/bottom_sheet_button"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="center"
+                android:contentDescription="@string/bottom_sheet_access_button"
                 android:src="@drawable/img_bar" />
         </FrameLayout>
 
@@ -30,8 +31,9 @@
             android:layout_width="match_parent"
             android:layout_height="240dp"
             android:scaleType="centerCrop"
+            android:src="@drawable/sampleidcard"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_button_layout"
-            android:src="@drawable/sampleidcard" />
+            android:contentDescription="@string/id_card_image"
+            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_button_layout" />
     </LinearLayout>
 </layout>
