--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,10 +13,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/app_name"
-        android:textSize="40sp"
-        android:textColor="@color/colorText"
         android:fontFamily="@font/montserrat_bold"
+        android:text="@string/app_name"
+        android:textColor="@color/colorText"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,10 +27,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/login_fragment_tagline"
-        android:textSize="14sp"
-        android:textColor="@color/colorText"
         android:fontFamily="@font/montserrat_light"
+        android:text="@string/login_fragment_tagline"
+        android:textColor="@color/colorText"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -43,6 +43,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/ic_illustration_login"
+        android:importantForAccessibility="no"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -54,16 +55,18 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/montserrat_semibold"
-        android:textSize="16sp"
-        android:paddingStart="60dp"
-        android:inputType="textEmailAddress"
-        android:hint="@string/login_edit_text_email_hint"
-        android:textColor="@color/colorText"
+        android:autofillHints="emailAddress"
         android:background="@drawable/bg_txt_username"
+        android:fontFamily="@font/montserrat_semibold"
+        android:hint="@string/login_edit_text_email_hint"
+        android:inputType="textEmailAddress"
+        android:paddingStart="60dp"
+        android:textColor="@color/colorText"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        tools:ignore="RtlSymmetry" />
 
     <EditText
         android:id="@+id/password_et"
@@ -71,16 +74,18 @@
         android:layout_height="72dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/montserrat_semibold"
-        android:textSize="16sp"
-        android:paddingStart="60dp"
-        android:hint="@string/login_edit_text_password_hint"
-        android:textColor="@color/colorText"
-        android:inputType="textPassword"
+        android:autofillHints="password"
         android:background="@drawable/bg_txt_password"
+        android:fontFamily="@font/montserrat_semibold"
+        android:hint="@string/login_edit_text_password_hint"
+        android:inputType="textPassword"
+        android:paddingStart="60dp"
+        android:textColor="@color/colorText"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_et" />
+        app:layout_constraintTop_toBottomOf="@+id/email_et"
+        tools:ignore="RtlSymmetry" />
 
     <TextView
         android:id="@+id/forgot_password_button"
@@ -88,10 +93,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/login_fragment_forgot_password"
-        android:textSize="14sp"
-        android:textColor="@color/purple_500"
         android:fontFamily="@font/montserrat_semibold"
+        android:text="@string/login_fragment_forgot_password"
+        android:textColor="@color/purple_500"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.883"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,35 +110,35 @@
         android:layout_marginTop="8dp"
         android:paddingHorizontal="32dp"
         android:text="@string/login_activity_log_in"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/forgot_password_button"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/forgot_password_button" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-    <TextView
-        android:id="@+id/sign_up_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat_light"
-        android:text="@string/login_fragment_create_account"
-        android:textColor="@color/colorText" />
+        <TextView
+            android:id="@+id/sign_up_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_light"
+            android:text="@string/login_fragment_create_account"
+            android:textColor="@color/colorText" />
 
-    <TextView
-        android:id="@+id/sign_up_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:textColor="@color/purple_500"
-        android:fontFamily="@font/montserrat_semibold"
-        android:text="@string/login_fragment_sign_up"/>
+        <TextView
+            android:id="@+id/sign_up_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:fontFamily="@font/montserrat_semibold"
+            android:text="@string/login_fragment_sign_up"
+            android:textColor="@color/purple_500" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
