--- a/app/src/main/res/layout/pdf_item.xml
+++ b/app/src/main/res/layout/pdf_item.xml
@@ -11,6 +11,7 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:scaleType="centerCrop"
+        android:contentDescription="@string/pdf_icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/backgrounds/scenic" />
