implemented pdf access from docs and show in pdf viewer (pdf storage not added)

--- a/app/src/main/res/layout-v21/fragment_subject_notes.xml
+++ b/app/src/main/res/layout-v21/fragment_subject_notes.xml
@@ -25,38 +25,20 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
+            android:id="@+id/pdf_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/search_view"
-            tools:listitem="@layout/notes_subject_item" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_alignParentBottom="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <ImageView
-                android:id="@+id/bottom_sheet_button"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center"
-                android:contentDescription="@string/bottom_sheet_access_button"
-                android:src="@drawable/img_bar" />
-        </FrameLayout>
+            app:layout_constraintTop_toBottomOf="@id/search_view" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabBtnCreateNote"
+            android:id="@+id/fab_add_pdf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
-            android:contentDescription="@string/add_subject_button"
-            android:src="@drawable/ic_baseline_add_24"
+            android:contentDescription="@string/upload_pdf_button"
+            android:src="@drawable/ic_baseline_upload_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
