--- a/app/src/main/res/layout/fragment_subject_notes.xml
+++ b/app/src/main/res/layout/fragment_subject_notes.xml
@@ -8,22 +8,36 @@
         android:layout_height="match_parent"
         tools:context=".ui.NotesFragment">
 
+        <SearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/search_background"
+            android:iconifiedByDefault="false"
+            android:queryHint="Search Subject"
+            android:theme="@style/ThemeOverlay.search"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/pdf_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/pdf_item" />
+            app:layout_constraintTop_toBottomOf="@id/search_view" />
 
-        <Button
-            android:id="@+id/select_pdf_button"
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_add_pdf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Open PDF"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="24dp"
+            android:contentDescription="@string/upload_pdf_button"
+            android:src="@drawable/ic_baseline_upload_24"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
