--- a/app/src/main/res/layout/fragment_subject_notes.xml
+++ b/app/src/main/res/layout/fragment_subject_notes.xml
@@ -26,6 +26,7 @@
             android:id="@+id/pdf_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/search_view" />
 
