--- a/app/src/main/res/layout-v21/notes_subject_item.xml
+++ b/app/src/main/res/layout-v21/notes_subject_item.xml
@@ -12,24 +12,35 @@
         <variable
             name="subjectCallback"
             type="com.example.collegebuddy.adapters.SubjectClick" />
+
+        <variable
+            name="subjectLongCallback"
+            type="com.example.collegebuddy.adapters.SubjectLongClick" />
     </data>
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="8dp"
-        android:elevation="32dp"
-        android:onClick="@{() -> subjectCallback.onClick(subject)}"
-        app:cardCornerRadius="32dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content"
+        android:paddingVertical="8dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@{subject.name}"
-            android:textSize="20sp"
-            tools:text="Applied Mathematics II" />
-    </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="8dp"
+            android:elevation="32dp"
+            android:onClick="@{() -> subjectCallback.onClick(subject)}"
+            android:onLongClick="@{() -> subjectLongCallback.onLongClick(subject)}"
+            app:cardCornerRadius="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@{subject.name}"
+                android:textSize="20sp"
+                tools:text="Applied Mathematics II" />
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </layout>
