--- a/app/src/main/res/layout-v21/notes_subject_item.xml
+++ b/app/src/main/res/layout-v21/notes_subject_item.xml
@@ -26,11 +26,12 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_margin="8dp"
+            android:layout_marginVertical="8dp"
+            android:layout_marginHorizontal="16dp"
             android:elevation="32dp"
             android:onClick="@{() -> subjectCallback.onClick(subject)}"
             android:onLongClick="@{() -> subjectLongCallback.onLongClick(subject)}"
-            app:cardCornerRadius="32dp"
+            app:cardCornerRadius="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
