--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -16,7 +16,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="12dp"
             android:fontFamily="@font/montserrat_bold"
-            android:text="Attendance"
+            android:text="@string/fragment_attendance_title"
             android:textColor="@color/colorText"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:hint="Today's Classes"
+            android:hint="@string/fragment_attendance_text_view_total_classes"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/attendance_title_tv">
 
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:hint="Classes Attended"
+            android:hint="@string/fragment_attendance_text_view_classes_attended"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/total_classes_layout">
 
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:padding="14dp"
-            android:text="SUBMIT"
+            android:text="@string/fragment_attendance_submit_button"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/attended_classes_layout" />
@@ -77,7 +77,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="12dp"
             android:fontFamily="@font/montserrat_bold"
-            android:text="Summary"
+            android:text="@string/fragment_attendance_summary_title"
             android:textColor="@color/colorText"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
