added hint for to upload pdf and create subject if list empty

--- a/app/src/main/res/layout/fragment_subject_notes.xml
+++ b/app/src/main/res/layout/fragment_subject_notes.xml
@@ -40,5 +40,20 @@
             android:src="@drawable/ic_baseline_upload_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/add_pdf_hint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:fontFamily="@font/montserrat_semibold"
+            android:gravity="center"
+            android:visibility="gone"
+            android:text="@string/fragment_subject_notes_add_pdf_hint"
+            android:textColor="@color/gray"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
