--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -85,7 +85,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="180dp"
             android:layout_margin="16dp"
             android:elevation="32dp"
             app:cardCornerRadius="16dp"
@@ -94,18 +94,17 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:padding="8dp"
                 android:weightSum="1">
 
-                <!-- TODO(Replace with Pie Chart Graph) -->
-                <ImageView
+                <org.eazegraph.lib.charts.PieChart
+                    android:id="@+id/pie_chart"
                     android:layout_width="0dp"
-                    android:layout_height="200dp"
-                    android:layout_weight="0.5"
-                    android:scaleType="centerCrop"
-                    tools:src="@tools:sample/backgrounds/scenic" />
+                    android:layout_height="match_parent"
+                    android:padding="24dp"
+                    android:layout_weight="0.5" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -114,24 +113,58 @@
                     android:layout_weight="0.5"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        tools:text="Attendance Percentage:" />
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="8dp">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:textStyle="bold"
-                        tools:text="75%" />
+                        <View
+                            android:layout_width="18dp"
+                            android:layout_height="match_parent"
+                            android:background="@color/absent" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:fontFamily="@font/montserrat_semibold"
+                            android:text="@string/fragment_attendance_summary_pie_chart_absent" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        tools:text="Congratulations! you have a great attendance percentage." />
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="8dp">
+
+                        <View
+                            android:layout_width="18dp"
+                            android:layout_height="match_parent"
+                            android:background="@color/present" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:fontFamily="@font/montserrat_semibold"
+                            android:text="@string/fragment_attendance_summary_pie_chart_present" />
+                    </LinearLayout>
+
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginStart="8dp"-->
+<!--                        android:layout_marginTop="8dp"-->
+<!--                        android:text="@string/fragment_attendance_summary_percentage_title" />-->
+
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginStart="8dp"-->
+<!--                        android:layout_marginTop="4dp"-->
+<!--                        android:textStyle="bold"-->
+<!--                        tools:text="75%" />-->
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
